# Projeto-de-NLP-do-Curso-Perspectiva-em-Ciencia-de-Dados

./: README.md  main.py  pyproject.toml  template_analise_palmeiras.pptx
Analise/: analise_final_palmeiras.ipynb
PLN/: Codigo_PLN.ipynb  tsne.ipynb
Projeto 1/: projeto_palmeiras_pln_ml.ipynb
Webscraping/: Webscrapping (1).ipynb
